# news-post-popularity-prediction

./: .dockerignore  .flake8  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
notebooks/: CLIP-эксперимент.ipynb  EDA_and_features.ipynb  ВКР_эксперименты с классификационной постановкой.ipynb  ВКР_эксперименты_с_engagement_rate.ipynb  ВКР_эксперименты_с_моделями_просмотры .ipynb
scripts/: download_data.py
src/backend/: __init__.py  api.py  logging_config.py  prediction.py  recommendations.py  routes.py  schemas.py  text_improvement.py
src/frontend/: recommendations.py  streamlit_app.py
src/ml/: config.py  main.py
src/ml/data/: loader.py  preprocessing.py
src/ml/embeddings/: clip.py  rubert.py
src/ml/features/: build_features.py
src/ml/modeling/: evaluate.py  logging.py  save.py  split.py  train.py
src/ml/pipeline/: checkpoints.py  prepare_data_pipeline.py  prepare_embeddings_pipeline.py  training_pipeline.py
src/utils/: dataframes.py  dates.py  recommendation_rules.py
