[project]
name = "news-post-popularity-prediction"
version = "0.1.0"
description = ""
authors = [
    { name = "George Lavrenov", email = "lavrenovg471@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas==2.2.3",
    "numpy==2.4.4",
    "pillow==11.2.1",
    "python-dotenv==1.2.2",
    "holidays==0.94",
]

[dependency-groups]
ml = [
    "catboost==1.2.10",
    "torch==2.11.0",
    "transformers==4.57.1",
    "sentence-transformers==3.0.1",
    "tqdm==4.67.3"
]

backend = [
    "fastapi==0.136.1",
    "uvicorn==0.45.0",
    "python-multipart==0.0.27",
    "openai==2.34.0"
]

frontend = [
    "streamlit==1.45.1",
    "requests==2.32.5"
]

train = [
    "scikit-learn==1.8.0",
    "mlflow==3.12.0",
    "click==8.3.2",
    "dvc[gdrive]==3.67.1"
]

dev = [
    "black==26.3.1",
    "flake8==7.3.0",
    "ipykernel==7.2.0"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]